Fixed bug where overflow was shown in partner carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,9 +552,10 @@ MAIN
 /* Swiper */
 
 .swiper-container {
-    width: 100%;
+    max-width: 100%;
     height: 100px;
     padding: 0.5rem;
+    overflow: hidden;
 }
 
 .swiper-slide{
